--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "bootstrap-sass": "^3.3.7",
     "easy-autocomplete": "^1.3.5",
     "jquery": "^3.3.1",
-    "vue": "^2.5.0"
+    "vue": "^2.5.0",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "browser-sync": "^2.23.6",
     "browser-sync-webpack-plugin": "^1.2.0",
     "cross-env": "^5.1.3",
-    "laravel-mix": "^1.7.2",
-    "lodash": "^4.17.4"
+    "laravel-mix": "^1.7.2"
   }
 }
